projet_gl/src/test/deca/syntax/invalid/class/incorrectExtends.deca
// Description:
//    invalid test parser for extends.
//
// Resultats:
//    ligne 11 : no viable alternative at input 'extend'
//
// Historique:
//    cree le 13/01/2024

class test{}
class test1 extend test test1{}
